packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-009.ttrp
// expect: TTRP-PD-009
container c target polars """pandas
t.limit(10)
"""
